# remo-rs

./: .gitignore  Cargo.toml
remo-api/: Cargo.toml  README.md
remo-api/.openapi-generator/: FILES
remo-api/docs/: AirconSettingsResponse.md  ApplianceModelAndParam.md  ApplianceModelAndParamModel.md  ApplianceModelAndParamParams.md  ApplianceResponse.md  ApplianceResponseAircon.md  ApplianceResponseAirconRange.md  ApplianceResponseAirconRangeModesValue.md  ApplianceResponseAirconSmartEcoMode.md  ApplianceResponseBle.md  ApplianceResponseBleMacrosValue.md  ApplianceResponseBleSesame.md  ApplianceResponseDevice.md  ApplianceResponseEchonetlite.md  ApplianceResponseEchonetliteGetPropertiesValue.md  ApplianceResponseEchonetliteLocalize.md  ApplianceResponseEchonetliteLocalizePropertiesValue.md  ApplianceResponseEchonetliteLocalizePropertiesValueEnumValue.md  ApplianceResponseLight.md  ApplianceResponseLightButtonsInner.md  ApplianceResponseLightProjector.md  ApplianceResponseLightProjectorLayout.md  ApplianceResponseLightProjectorLayoutTemplatesInner.md  ApplianceResponseLightState.md  ApplianceResponseMorninPlus.md  ApplianceResponseMorninPlusDevicesInner.md  ApplianceResponseQrioLock.md  ApplianceResponseQrioLockDevice.md  ApplianceResponseSettings.md  ApplianceResponseSignalsInner.md  ApplianceResponseSmartMeter.md  ApplianceResponseTv.md  ApplianceResponseTvState.md  (+25 more)
remo-home/: Cargo.toml
remo-sdk/: Cargo.toml
remo-sdk/src/: api.rs  client.rs  error.rs  lib.rs
remo-sdk/src/api/: appliance.rs  ble.rs  devices.rs  echonetlite.rs  homes.rs  signals.rs  users.rs
(+62 files in other folders)
