[package]
name = "remo-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
remo-api = { path = "../remo-api" }
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "2.5.0" }
eyre = "0.6.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
